--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "start": "serverless offline start"
   },
   "dependencies": {
-    "async": "2.6.1",
-    "aws-regions": "1.4.1",
-    "aws-sdk": "2.238.1",
-    "bluebird": "3.5.3",
+    "async": "^3.2.0",
+    "aws-regions": "^2.2.0",
+    "aws-sdk": "^2.825.0",
+    "bluebird": "^3.7.2",
+    "follow-redirects": "^1.13.1",
     "install": "^0.12.2",
     "path": "0.12.7"
   },
   "devDependencies": {
-    "serverless": "1.36.3",
-    "serverless-iam-roles-per-function": "1.0.4",
+    "nodemon": "^2.0.7",
+    "serverless": "^1.83.2",
+    "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-local-schedule": "0.1.6",
-    "serverless-offline": "3.21.1",
-    "serverless-offline-scheduler": "0.3.3"
+    "serverless-offline": "^5.12.1",
+    "serverless-offline-scheduler": "^0.3.8"
   }
 }
